# viv

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  package-lock.json  package.json
compiler/: CHANGELOG.md  README.md  pyproject.toml
compiler/src/viv_compiler/: __init__.py  __main__.py  _versions.py  api.py  cli.py
compiler/src/viv_compiler/_samples/: __init__.py  smoke-test.viv
compiler/src/viv_compiler/bundler/: __init__.py  _metadata.py  bundler.py
compiler/src/viv_compiler/config/: __init__.py  config.py
compiler/src/viv_compiler/errors/: __init__.py  errors.py
compiler/src/viv_compiler/external_types/: __init__.py  content_types.py  dsl_types.py
compiler/src/viv_compiler/grammar/: __init__.py  viv.peg
compiler/src/viv_compiler/includes/: __init__.py  includes.py
compiler/src/viv_compiler/internal_types/: __init__.py  internal_types.py
compiler/src/viv_compiler/pipeline/: __init__.py  pipeline.py
compiler/src/viv_compiler/postprocessing/: __init__.py  _inheritance.py  _role_dependencies.py  postprocessing.py
compiler/src/viv_compiler/schemas/: __init__.py  content-bundle.schema.json
compiler/src/viv_compiler/sentinels/: __init__.py  sentinels.py
compiler/src/viv_compiler/utils/: __init__.py  utils.py
compiler/src/viv_compiler/validation/: __init__.py  _common.py  (+10 more)
compiler/tests/: __init__.py  conftest.py  test_associations.py  test_cli.py  test_compilation.py  test_compile_from_string.py  test_errors.py  test_expressions.py  test_includes.py  test_inheritance.py  test_metadata.py  test_plans.py  test_queries.py  test_reactions.py  test_reference_paths.py  test_role_labels.py  test_roles.py  test_selectors.py  test_sifting_patterns.py  test_template_strings.py  test_temporal.py  test_tropes.py
wizard/dapt/: __init__.py  pyproject.toml
wizard/dapt/aggregation/: __init__.py  _config.py  _manifest.py  _types.py  aggregator.py
wizard/dapt/data/: __init__.py  types.py
wizard/dapt/eval/: __init__.py  __main__.py  runner.py
wizard/dapt/pipeline/: __init__.py  __main__.py  _checkpoints.py  _config.py  _data.py  _model.py  _tokenizer.py  _tracking.py  _training.py  _types.py  _utils.py  _validation.py  pipeline.py
wizard/dapt/scripts/: eval.sh  setup_runpod.sh  train.sh
wizard/dapt/synthesis/: CLAUDE.md  status.md
(+848 files in other folders)
